--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 <body>
 
-<!-- Preloader -->
+<!-- ================= PRELOADER ================= -->
 <div id="preloader">
   <div class="loader-square"></div>
 </div>
 
-<!-- HERO SECTION -->
+<!-- ================= HERO SECTION ================= -->
 <header class="hero" id="home">
   <div id="particles-js"></div>
   <nav>
@@ -39,15 +39,15 @@
   </div>
 </header>
 
-<!-- ABOUT SECTION -->
+<!-- ================= ABOUT ================= -->
 <section id="about" class="about">
   <div class="about-img">
     <img src="https://i.postimg.cc/6QzjYwy5/Whats-App-Image-2025-09-01-at-9-17-04-AM.jpg" alt="Lead Generation Specialist">
   </div>
   <div class="about-text">
     <h2>About <span>Me</span></h2>
-    <p> Myself <strong>Aamir Shahzad</strong> working as a <strong>Lead Generation Specialist</strong> with expertise in providing <strong>manually verified fresh data</strong> tailored to client needs. Whether it’s <strong>B2B or B2C leads</strong>, I ensure accuracy and relevance for maximum business growth. </p>
-    <p> I specialize in delivering leads across multiple industries, including: Real Estate, E-commerce, Finance, Healthcare, and Education. Along with Lead Generation, I also provide <strong>Lead List Building</strong> and <strong>Web Research services</strong> to help businesses connect with the right audience. </p>
+    <p> Myself <strong>Aamir Shahzad</strong> working as a <strong>Lead Generation Specialist</strong> with expertise in providing <strong>manually verified fresh data</strong> tailored to client needs. </p>
+    <p> I deliver <strong>B2B and B2C leads</strong>, ensuring accuracy and relevance for maximum business growth. My services cover: Real Estate, E-commerce, Finance, Healthcare, and Education. </p>
     <ul class="info">
       <li><strong>Expertise:</strong> Lead Generation Specialist, LinkedIn, List Building, Sourcing</li>
       <li><strong>Email:</strong> amirshahzad37925@gmail.com</li>
@@ -57,56 +57,30 @@
   </div>
 </section>
 
-
-<!-- SERVICES -->
+<!-- ================= SERVICES ================= -->
 <section id="services" class="services">
   <h2><span style="color:white;">My</span> <span>Services</span></h2>
   <div class="service-container">
-
     <div class="service-box">
       <h3>Lead Generation</h3>
       <p>Helping businesses capture potential clients through smart funnels and campaigns.</p>
-      <ul class="service-points">
-        <li><i class="fas fa-check-circle"></i> Smart sales funnels</li>
-        <li><i class="fas fa-check-circle"></i> Targeted ad campaigns</li>
-        <li><i class="fas fa-check-circle"></i> High-quality leads</li>
-      </ul>
     </div>
-
     <div class="service-box">
       <h3>Lead List Building</h3>
-      <p>Creating engaging ads and content strategies to boost online visibility and conversions.</p>
-      <ul class="service-points">
-        <li><i class="fas fa-check-circle"></i> Verified contact lists</li>
-        <li><i class="fas fa-check-circle"></i> Industry-specific targeting</li>
-        <li><i class="fas fa-check-circle"></i> Accurate & updated data</li>
-      </ul>
+      <p>Verified data collection to ensure targeted and accurate outreach.</p>
     </div>
-
     <div class="service-box">
       <h3>Email Marketing</h3>
-      <p>Designing and executing campaigns that nurture leads and drive repeat sales.</p>
-      <ul class="service-points">
-        <li><i class="fas fa-check-circle"></i> Personalized campaigns</li>
-        <li><i class="fas fa-check-circle"></i> Automated follow-ups</li>
-        <li><i class="fas fa-check-circle"></i> Higher open & click rates</li>
-      </ul>
+      <p>Designing campaigns that nurture leads and drive repeat sales.</p>
     </div>
-
     <div class="service-box">
       <h3>SEO Optimization</h3>
-      <p>Improving website rankings with proven search engine strategies and keyword targeting.</p>
-      <ul class="service-points">
-        <li><i class="fas fa-check-circle"></i> On-page optimization</li>
-        <li><i class="fas fa-check-circle"></i> Keyword research</li>
-        <li><i class="fas fa-check-circle"></i> Backlink strategies</li>
-      </ul>
+      <p>Improving website rankings with proven strategies and keyword targeting.</p>
     </div>
-
   </div>
 </section>
 
-<!-- PORTFOLIO -->
+<!-- ================= PORTFOLIO ================= -->
 <section id="portfolio" class="portfolio">
   <h2><span style="color:white;">My</span> <span>Work</span></h2>
   <div class="portfolio-container">
@@ -117,7 +91,7 @@
   </div>
 </section>
 
-<!-- COUNTER SECTION -->
+<!-- ================= COUNTER ================= -->
 <section id="counter" class="counter-section">
   <h2><span style="color:white;">My</span> <span>Stats</span></h2>
   <div class="counter-container">
@@ -140,7 +114,7 @@
   </div>
 </section>
 
-<!-- REVIEWS SECTION -->
+<!-- ================= REVIEWS ================= -->
 <section id="reviews" class="reviews">
   <h2><span style="color:white;">Client</span> <span>Reviews</span></h2>
   <div class="review-slider">
@@ -158,32 +132,22 @@
     </div>
   </div>
 </section>  
-  
-<!-- FOOTER -->
+
+<!-- ================= FOOTER ================= -->
 <footer>
-  <!-- Top: Contact Info -->
-  <div class="footer-top">
-    <div class="footer-contact">
-      <i class="fas fa-phone"></i>
-      <p><a href="tel:+923063337925">+92 306 3337 925</a></p>
-    </div>
-    <div class="footer-contact">
-      <i class="fas fa-envelope"></i>
-      <p><a href="mailto:amirshahzad37925@gmail.com">amirshahzad37925@gmail.com</a></p>
-    </div>
-    <div class="footer-contact">
-      <i class="fas fa-map-marker-alt"></i>
-      <p>Bahawalpur, Pakistan</p>
-    </div>
+  <!-- Tagline Section -->
+  <div class="footer-tagline">
+    <h2>“Turning Data Into Deals, One Lead At A Time.”</h2>
+    <p><strong>Trusted Partner For Business Growth & Client Success.</strong></p>
   </div>
 
-  <!-- Slim Email Bar -->
-<div class="footer-email-bar">
-  <form>
-    <input type="email" placeholder="Enter your email" required>
-    <button type="submit">Send Email</button>
-  </form>
-</div>
+  <!-- Email Bar -->
+  <div class="footer-email-bar">
+    <form>
+      <input type="email" placeholder="Enter your email" required>
+      <button type="submit">Send Email</button>
+    </form>
+  </div>
 
   <!-- Middle Links -->
   <div class="footer-main">
@@ -217,69 +181,58 @@
   </div>
 </footer>
 
-<!-- Privacy Policy Modal -->
+<!-- Privacy Modal -->
 <div id="privacy-modal" class="modal">
   <div class="modal-content">
     <span class="close">&times;</span>
     <h2>Privacy Policy</h2>
-    <p>
-      Your privacy is important. Any personal information shared through this site 
-      will only be used to respond to your inquiries.  
-      We do not share, sell, or misuse your data in any way.
-    </p>
+    <p>Your privacy is important. We only use your information to respond to inquiries. We do not share or sell your data.</p>
   </div>
 </div>
 
-
+<!-- ================= SCRIPTS ================= -->
 <script>
+  // Preloader
   window.addEventListener("load", () => {
     setTimeout(() => {
       document.getElementById("preloader").style.display = "none";
     }, 2000);
   });
-</script>
-<script src="script.js"></script>
 
-<script>
-// ================= COUNTER ANIMATION =================
-document.addEventListener("DOMContentLoaded", () => {
-  const counters = document.querySelectorAll(".counter");
-  const speed = 200; // lower = faster
+  // Counter
+  document.addEventListener("DOMContentLoaded", () => {
+    const counters = document.querySelectorAll(".counter");
+    const speed = 200;
+    let started = false;
+    const section = document.querySelector(".counter-section");
 
-  const animateCounters = () => {
-    counters.forEach(counter => {
-      const updateCount = () => {
-        const target = +counter.getAttribute("data-target");
-        const count = +counter.innerText;
+    const animateCounters = () => {
+      counters.forEach(counter => {
+        const updateCount = () => {
+          const target = +counter.getAttribute("data-target");
+          const count = +counter.innerText;
+          const increment = Math.ceil(target / speed);
+          if (count < target) {
+            counter.innerText = count + increment;
+            setTimeout(updateCount, 30);
+          } else {
+            counter.innerText = target;
+          }
+        };
+        updateCount();
+      });
+    };
 
-        const increment = Math.ceil(target / speed);
-
-        if (count < target) {
-          counter.innerText = count + increment;
-          setTimeout(updateCount, 30);
-        } else {
-          counter.innerText = target;
-        }
-      };
-      updateCount();
+    window.addEventListener("scroll", () => {
+      const sectionTop = section.getBoundingClientRect().top;
+      if (sectionTop < window.innerHeight && !started) {
+        animateCounters();
+        started = true;
+      }
     });
-  };
-
-  // Run animation when section is in viewport
-  const section = document.querySelector(".counter-section");
-  let started = false;
-  window.addEventListener("scroll", () => {
-    const sectionTop = section.getBoundingClientRect().top;
-    const windowHeight = window.innerHeight;
-    if (sectionTop < windowHeight && !started) {
-      animateCounters();
-      started = true;
-    }
   });
-});
-  
-<script>
-  // ================= SLIDE-IN EMAIL BAR =================
+
+  // Email Bar Slide-in
   document.addEventListener("DOMContentLoaded", () => {
     const emailBar = document.querySelector(".footer-email-bar");
     if (emailBar) {
@@ -294,14 +247,10 @@ document.addEventListener("DOMContentLoaded", () => {
     }
   });
 
-  // ================= PRIVACY POLICY MODAL =================
+  // Privacy Modal
   const modal = document.getElementById("privacy-modal");
-  const openLinks = [
-    document.getElementById("privacy-link"),
-    document.getElementById("privacy-link-bottom")
-  ];
+  const openLinks = [document.getElementById("privacy-link"), document.getElementById("privacy-link-bottom")];
   const closeBtn = document.querySelector(".close");
-
   openLinks.forEach(link => {
     if (link) {
       link.addEventListener("click", (e) => {
@@ -310,13 +259,8 @@ document.addEventListener("DOMContentLoaded", () => {
       });
     }
   });
-
-  if (closeBtn) {
-    closeBtn.onclick = () => modal.style.display = "none";
-  }
-  window.onclick = (e) => { 
-    if (e.target === modal) modal.style.display = "none"; 
-  };
+  if (closeBtn) closeBtn.onclick = () => modal.style.display = "none";
+  window.onclick = (e) => { if (e.target === modal) modal.style.display = "none"; };
 </script>
 
 </body>
