--- a/index.html
+++ b/index.html
@@ -135,22 +135,40 @@
 
 <!-- ================= FOOTER ================= -->
 <footer>
-  <!-- Tagline Section -->
-  <div class="footer-tagline">
-    <h2>“Turning Data Into Deals, One Lead At A Time.”</h2>
-    <p><strong>Trusted Partner For Business Growth & Client Success.</strong></p>
+  <!-- Top Contact Info -->
+  <div class="footer-top">
+    <div class="footer-contact">
+      <i class="fas fa-phone-alt"></i>
+      <p><a href="tel:+923001234567">+92 300 1234567</a></p>
+    </div>
+    <div class="footer-contact">
+      <i class="fas fa-envelope"></i>
+      <p><a href="mailto:youremail@example.com">youremail@example.com</a></p>
+    </div>
+    <div class="footer-contact">
+      <i class="fas fa-map-marker-alt"></i>
+      <p>Bahawalpur, Pakistan</p>
+    </div>
   </div>
 
-  <!-- Email Bar -->
+  <!-- Slim Send Email Bar -->
   <div class="footer-email-bar">
     <form>
-      <input type="email" placeholder="Enter your email" required>
+      <input type="email" placeholder="Enter your email..." required>
       <button type="submit">Send Email</button>
     </form>
   </div>
 
   <!-- Middle Links -->
   <div class="footer-main">
+  <!-- Left Tagline -->
+     <!-- Tagline Section -->
+  <div class="footer-tagline">
+    <h2>“Turning Data Into Deals, One Lead At A Time.”</h2>
+    <p><strong>Trusted Partner For Business Growth & Client Success.</strong></p>
+  </div>
+    
+  <!-- Right Columns -->
     <div class="footer-col">
       <h3>About</h3>
       <ul>
