--- a/index.html
+++ b/index.html
@@ -135,15 +135,15 @@
 
 <!-- ================= FOOTER ================= -->
 <footer>
-  <!-- Top Contact Info -->
+  <!-- Top: Contact Info -->
   <div class="footer-top">
     <div class="footer-contact">
-      <i class="fas fa-phone-alt"></i>
-      <p><a href="tel:+923001234567">+92 300 1234567</a></p>
+      <i class="fas fa-phone"></i>
+      <p><a href="tel:+923063337925">+92 306 3337 925</a></p>
     </div>
     <div class="footer-contact">
       <i class="fas fa-envelope"></i>
-      <p><a href="mailto:youremail@example.com">youremail@example.com</a></p>
+      <p><a href="mailto:amirshahzad37925@gmail.com">amirshahzad37925@gmail.com</a></p>
     </div>
     <div class="footer-contact">
       <i class="fas fa-map-marker-alt"></i>
