--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
     </div>
   </div>
 
-  <!-- Slim Send Email Bar -->
-  <div class="footer-email-bar">
+  <!-- Slim Send message Bar -->
+  <div class="footer-message-bar">
     <form>
-      <input type="email" placeholder="Enter your email..." required>
-      <button type="submit">Send Email</button>
+      <input type="message" placeholder="write your message..." required>
+      <button type="submit">Send message</button>
     </form>
   </div>
 
