--- a/index.html
+++ b/index.html
@@ -250,10 +250,10 @@
     });
   });
 
-  // Email Bar Slide-in
+  // Message Bar Slide-in
   document.addEventListener("DOMContentLoaded", () => {
-    const emailBar = document.querySelector(".footer-email-bar");
-    if (emailBar) {
+    const messageBar = document.querySelector(".footer-message-bar");
+    if (messageBar) {
       const observer = new IntersectionObserver((entries) => {
         entries.forEach(entry => {
           if (entry.isIntersecting) {
