--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
     <h2>My <span>Achievements</span></h2>
     <div class="counter-container">
       <div class="counter-box">
-        <h3 class="counter" data-target="100+">0</h3>
+        <h3 class="counter" data-target="100">0</h3>
         <p>Happy Clients</p>
       </div>
       <div class="counter-box">
-        <h3 class="counter" data-target="100+">0</h3>
+        <h3 class="counter" data-target="100">0</h3>
         <p>Projects Completed</p>
       </div>
       <div class="counter-box">
