--- a/index.html
+++ b/index.html
@@ -172,10 +172,11 @@
   </section>
 
   <!-- ================= FOOTER ================= -->
-  <<footer>
+  <footer>
   <section class="contact-section">
     <div class="container">
       <h2><span class="white-text">Contact</span> Me</h2>
+
       <p class="contact-info">
         Gmail: 
         <a href="https://mail.google.com/mail/?view=cm&fs=1&to=amirshahzad37925@gmail.com" target="_blank">
@@ -197,7 +198,6 @@
 
   <p style="margin:0; font-size:14px; color:#aaa;">© 2025 Aamir Shahzad | All Rights Reserved</p>
 </footer>
-
 
    <!-- ================= SCRIPTS ================= -->
   <!-- TS PARTICLES CDN -->
