--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
       <li><a href="#home" class="active">Home</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#services">Services</a></li>
-      <li><a href="#portfolio">Portfolio</a></li>
-      <li><a href="#stats">Stats</a></li>
-      <li><a href="#reviews">Reviews</a></li>
+      <li><a href="#portfolio, #stats, #reviews">Portfolio</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
