--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
   <footer>
   <section class="contact-section">
     <div class="container">
-      <h2><span class="white-text">Contact</span> Me</h2>
+      <h2>Contact <span>Me</span></h2>
 
       <p class="contact-info">
         Gmail: 
