--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
       <img src="https://i.postimg.cc/j50HHFhd/Screenshot-2025-08-16-130718.png" alt="Project 2">
       <img src="https://i.postimg.cc/3rZXG90Y/Screenshot-2025-08-16-130606.png" alt="Project 3">
       <img src="https://i.postimg.cc/CLQfC2hT/Screenshot-2025-09-01-094027-1000-rows.png" alt="Project 4">
+      <img src="https://i.postimg.cc/x8q6RxTB/Facebook-SS.png" alt="Project 5">
+      <img src="https://i.postimg.cc/wBHFPTjX/Twitter-SS.png" alt="Project 6">
+      <img src="https://i.postimg.cc/pTLCWG8y/instagram-ss.png" alt="Project 7">
+      <img src="https://i.postimg.cc/8P6HzrFd/Medium-SS.png" alt="Project 8">
     </div>
   </section>
 
@@ -178,7 +182,7 @@
   <footer>
   <section class="contact-section">
     <div class="container">
-      <h2>Contact <span>Me</span></h2>
+      <h2>Contact <span>Info</span></h2>
 
       <p class="contact-info">
         Gmail: 
