--- a/index.html
+++ b/index.html
@@ -179,31 +179,52 @@
   </section>
 
   <!-- ================= FOOTER ================= -->
-  <footer>
-  <section class="contact-section">
-    <div class="container">
-      <h2>Contact <span>Info</span></h2>
-
-      <p class="contact-info">
-        Gmail: 
-        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=amirshahzad37925@gmail.com" target="_blank">
-          amirshahzad37925@gmail.com
-        </a> 
-        | 
-        Phone: <a href="tel:+923063337925">+92 306 3337 925</a>
-      </p>
-
-      <div class="social-icons">
-        <a href="https://www.facebook.com/aamir.ibn.al.mazhar" target="_blank"><i class="fab fa-facebook"></i></a>
-        <a href="https://x.com/Aamir3337925" target="_blank"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.instagram.com/aamir_ibnalmazhar/" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://medium.com/@amirshahzad37925" target="_blank"><i class="fab fa-medium"></i></a>
-        <a href="https://join.skype.com/invite/LkkvzG3eqi7S" target="_blank"><i class="fab fa-skype"></i></a>
-      </div>
+  <footer class="footer">
+  <div class="footer-top">
+    <div class="footer-info">
+      <i class="fas fa-phone"></i>
+      <p>+92 306 3337 925</p>
     </div>
-  </section>
+    <div class="footer-info">
+      <i class="fas fa-envelope"></i>
+      <p>amirshahzad37925@gmail.com</p>
+    </div>
+    <div class="footer-info">
+      <i class="fas fa-map-marker-alt"></i>
+      <p><a href="https://share.google/4PVZF1nhmhQ8WYfIz" target="_blank">Bahawalpur, Pakistan</a></p>
+    </div>
+  </div>
 
-  <p style="margin:0; font-size:14px; color:#aaa;">© 2025 Aamir Shahzad | All Rights Reserved</p>
+  <!-- Decorative Image Section -->
+  <div class="footer-decoration">
+    <img src="your-image.png" alt="Footer Decoration">
+  </div>
+
+  <div class="footer-middle">
+    <div class="footer-links">
+      <h4>About</h4>
+      <a href="#">My Story</a>
+      <a href="#">Services</a>
+      <a href="#">Portfolio</a>
+    </div>
+    <div class="footer-links">
+      <h4>Resources</h4>
+      <a href="#">Blog</a>
+      <a href="#">Privacy Policy</a>
+    </div>
+  </div>
+
+  <div class="footer-social">
+    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-medium"></i></a>
+    <a href="#"><i class="fab fa-skype"></i></a>
+  </div>
+
+  <div class="footer-bottom">
+    <p>© 2025 Aamir Shahzad | All Rights Reserved | <a href="#">Privacy Policy</a></p>
+  </div>
 </footer>
 
    <!-- ================= SCRIPTS ================= -->
