--- a/index.html
+++ b/index.html
@@ -179,53 +179,59 @@
   </section>
 
   <!-- ================= FOOTER ================= -->
-  <footer class="footer">
+ <!-- ======= Footer Section Start ======= -->
+<footer class="footer">
   <div class="footer-top">
     <div class="footer-info">
-      <i class="fas fa-phone"></i>
-      <p>+92 306 3337 925</p>
+      <div class="info-item">
+        <i class="fas fa-phone"></i>
+        <p>+92 306 3337 925</p>
+      </div>
+      <div class="info-item">
+        <i class="fas fa-envelope"></i>
+        <p>amirshahzad37925@gmail.com</p>
+      </div>
+      <div class="info-item">
+        <i class="fas fa-map-marker-alt"></i>
+        <p><a href="https://share.google.com/4PVZF1nhmhQ8WYfIz" target="_blank">Bahawalpur, Pakistan</a></p>
+      </div>
     </div>
-    <div class="footer-info">
-      <i class="fas fa-envelope"></i>
-      <p>amirshahzad37925@gmail.com</p>
-    </div>
-    <div class="footer-info">
-      <i class="fas fa-map-marker-alt"></i>
-      <p><a href="https://share.google/4PVZF1nhmhQ8WYfIz" target="_blank">Bahawalpur, Pakistan</a></p>
+    <!-- Background Image Section -->
+    <div class="footer-image">
+      <img src="Gulzar-Mahal.jpg" alt="Bahawalpur Image">
     </div>
   </div>
 
-  <!-- Decorative Image Section -->
-  <div class="footer-decoration">
-    <img src="your-image.png" alt="Footer Decoration">
-  </div>
-
-  <div class="footer-middle">
-    <div class="footer-links">
+  <div class="footer-links">
+    <div class="link-section">
       <h4>About</h4>
-      <a href="#">My Story</a>
-      <a href="#">Services</a>
-      <a href="#">Portfolio</a>
+      <ul>
+        <li><a href="#">My Story (Coming Soon)</a></li>
+        <li><a href="#">Services (Coming Soon)</a></li>
+        <li><a href="#">Portfolio (Coming Soon)</a></li>
+      </ul>
     </div>
-    <div class="footer-links">
+    <div class="link-section">
       <h4>Resources</h4>
-      <a href="#">Blog</a>
-      <a href="#">Privacy Policy</a>
+      <ul>
+        <li><a href="#">Blog (Coming Soon)</a></li>
+        <li><a href="#">Privacy Policy (Coming Soon)</a></li>
+      </ul>
     </div>
-  </div>
-
-  <div class="footer-social">
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-medium"></i></a>
-    <a href="#"><i class="fab fa-skype"></i></a>
   </div>
 
   <div class="footer-bottom">
+    <div class="social-links">
+      <a href="#"><i class="fab fa-facebook-f"></i></a>
+      <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="#"><i class="fab fa-medium"></i></a>
+      <a href="#"><i class="fab fa-skype"></i></a>
+    </div>
     <p>© 2025 Aamir Shahzad | All Rights Reserved | <a href="#">Privacy Policy</a></p>
   </div>
 </footer>
+<!-- ======= Footer Section End ======= -->
 
    <!-- ================= SCRIPTS ================= -->
   <!-- TS PARTICLES CDN -->
