--- a/index.html
+++ b/index.html
@@ -178,7 +178,6 @@
     </form>
   </section>
 
-  <!-- ================= FOOTER ================= -->
  <!-- ======= Footer Section Start ======= -->
 <footer class="footer">
   <div class="footer-top">
@@ -197,9 +196,10 @@
       </div>
     </div>
     <!-- Background Image Section -->
-    <div class="footer-image">
-      <img src="Gulzar-Mahal.jpg" alt="Bahawalpur Image">
-    </div>
+<div class="footer-image">
+  <img src="https://i.postimg.cc/hjWF6XGP/Gulzar-Mahal.jpg" alt="Bahawalpur Image">
+</div>
+
   </div>
 
   <div class="footer-links">
