--- a/index.html
+++ b/index.html
@@ -178,28 +178,25 @@
     </form>
   </section>
 
- <!-- ======= Footer Section Start ======= -->
+<!-- ======= Footer Section Start ======= -->
 <footer class="footer">
   <div class="footer-top">
-    <div class="footer-info">
-      <div class="info-item">
-        <i class="fas fa-phone"></i>
-        <p>+92 306 3337 925</p>
-      </div>
-      <div class="info-item">
-        <i class="fas fa-envelope"></i>
-        <p>amirshahzad37925@gmail.com</p>
-      </div>
-      <div class="info-item">
-        <i class="fas fa-map-marker-alt"></i>
-        <p><a href="https://share.google.com/4PVZF1nhmhQ8WYfIz" target="_blank">Bahawalpur, Pakistan</a></p>
+    <div class="overlay">
+      <div class="footer-info">
+        <div class="info-item">
+          <i class="fas fa-phone"></i>
+          <p>+92 306 3337 925</p>
+        </div>
+        <div class="info-item">
+          <i class="fas fa-envelope"></i>
+          <p>amirshahzad37925@gmail.com</p>
+        </div>
+        <div class="info-item">
+          <i class="fas fa-map-marker-alt"></i>
+          <p><a href="https://share.google.com/4PVZF1nhmhQ8WYfIz" target="_blank">Bahawalpur, Pakistan</a></p>
+        </div>
       </div>
     </div>
-    <!-- Background Image Section -->
-<div class="footer-image">
-  <img src="https://i.postimg.cc/hjWF6XGP/Gulzar-Mahal.jpg" alt="Bahawalpur Image">
-</div>
-
   </div>
 
   <div class="footer-links">
