--- a/index.html
+++ b/index.html
@@ -185,11 +185,11 @@
       <div class="footer-info">
         <div class="info-item">
           <i class="fas fa-phone"></i>
-          <p>+92 306 3337 925</p>
+          <p><a href="tel:+923063337925">+92 306 3337 925</a></p>
         </div>
         <div class="info-item">
           <i class="fas fa-envelope"></i>
-          <p>amirshahzad37925@gmail.com</p>
+          <p><a href="mailto:amirshahzad37925@gmail.com">amirshahzad37925@gmail.com</a></p>
         </div>
         <div class="info-item">
           <i class="fas fa-map-marker-alt"></i>
