--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@
       <li><a href="#about">About</a></li>
       <li><a href="#services">Services</a></li>
       <li><a href="#portfolio">Portfolio</a></li>
-      <li><a href="#stats">stats</a></li>
-      <li><a href="#reviews">reviews</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
@@ -179,56 +177,56 @@
   </section>
 
 <!-- ======= Footer Section Start ======= -->
+<!-- ====== Footer Section ====== -->
 <footer class="footer">
+  <!-- Top Contact Info -->
   <div class="footer-top">
-    <div class="overlay">
-      <div class="footer-info">
-        <div class="info-item">
-          <i class="fas fa-phone"></i>
-          <p><a href="tel:+923063337925">+92 306 3337 925</a></p>
-        </div>
-        <div class="info-item">
-          <i class="fas fa-envelope"></i>
-          <p><a href="mailto:amirshahzad37925@gmail.com">amirshahzad37925@gmail.com</a></p>
-        </div>
-        <div class="info-item">
-          <i class="fas fa-map-marker-alt"></i>
-          <p><a href="https://share.google.com/4PVZF1nhmhQ8WYfIz" target="_blank">Bahawalpur, Pakistan</a></p>
-        </div>
-      </div>
+    <div class="contact-item">
+      <i class="fas fa-phone-alt"></i>
+      <a href="tel:+923063337925">+92 306 3337 925</a>
+    </div>
+    <div class="contact-item">
+      <i class="fas fa-envelope"></i>
+      <a href="mailto:amirshahzad37925@gmail.com">amirshahzad37925@gmail.com</a>
+    </div>
+    <div class="contact-item">
+      <i class="fas fa-map-marker-alt"></i>
+      <span>Bahawalpur, Pakistan</span>
     </div>
   </div>
 
-  <div class="footer-links">
-    <div class="link-section">
+  <!-- Middle Links -->
+  <div class="footer-mid">
+    <div class="footer-col">
       <h4>About</h4>
       <ul>
-        <li><a href="#">My Story (Coming Soon)</a></li>
-        <li><a href="#">Services (Coming Soon)</a></li>
-        <li><a href="#">Portfolio (Coming Soon)</a></li>
+        <li><a href="about.html">My Story</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
       </ul>
     </div>
-    <div class="link-section">
+
+    <div class="footer-col">
       <h4>Resources</h4>
       <ul>
-        <li><a href="#">Blog (Coming Soon)</a></li>
-        <li><a href="#">Privacy Policy (Coming Soon)</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="privacy.html">Privacy Policy</a></li>
       </ul>
     </div>
   </div>
 
-  <div class="footer-bottom">
-    <div class="social-links">
-      <a href="#"><i class="fab fa-facebook-f"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
-      <a href="#"><i class="fab fa-medium"></i></a>
-      <a href="#"><i class="fab fa-skype"></i></a>
-    </div>
-    <p>© 2025 Aamir Shahzad | All Rights Reserved | <a href="#">Privacy Policy</a></p>
+  <!-- Bottom Social + Copyright -->
+  <div class="social-icons">
+        <a href="https://www.facebook.com/aamir.ibn.al.mazhar" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a href="https://x.com/Aamir3337925" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.instagram.com/aamir_ibnalmazhar/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://medium.com/@amirshahzad37925" target="_blank"><i class="fab fa-medium"></i></a>
+        <a href="https://join.skype.com/invite/LkkvzG3eqi7S" target="_blank"><i class="fab fa-skype"></i></a>
+      </div>
+
+    <p>© 2025 Aamir Shahzad | All Rights Reserved | <a href="privacy.html">Privacy Policy</a></p>
   </div>
-</footer>
-<!-- ======= Footer Section End ======= -->
+</footer>cbnmn mn 
 
    <!-- ================= SCRIPTS ================= -->
   <!-- TS PARTICLES CDN -->
