--- a/index.html
+++ b/index.html
@@ -177,23 +177,32 @@
   </section>
 
 <!-- ======= Footer Section Start ======= -->
-<!-- ====== Footer Section ====== -->
-<footer class="footer">
-  <!-- Top Contact Info -->
-  <div class="footer-top">
-    <div class="contact-item">
+<!-- ====== Footer Top Contact Info ====== -->
+<div class="footer-top">
+  <div class="contact-item">
+    <div class="icon-circle">
       <i class="fas fa-phone-alt"></i>
-      <a href="tel:+923063337925">+92 306 3337 925</a>
     </div>
-    <div class="contact-item">
-      <i class="fas fa-envelope"></i>
-      <a href="mailto:amirshahzad37925@gmail.com">amirshahzad37925@gmail.com</a>
-    </div>
-    <div class="contact-item">
-      <i class="fas fa-map-marker-alt"></i>
-      <span>Bahawalpur, Pakistan</span>
-    </div>
+    <h5>Phone</h5>
+    <a href="tel:+923063337925">+92 306 3337 925</a>
   </div>
+
+  <div class="contact-item">
+    <div class="icon-circle">
+      <i class="fas fa-envelope"></i>
+    </div>
+    <h5>Email</h5>
+    <a href="mailto:amirshahzad37925@gmail.com">amirshahzad37925@gmail.com</a>
+  </div>
+
+  <div class="contact-item">
+    <div class="icon-circle">
+      <i class="fas fa-map-marker-alt"></i>
+    </div>
+    <h5>Location</h5>
+    <span>Bahawalpur, Pakistan</span>
+  </div>
+</div>
 
   <!-- Middle Links -->
   <div class="footer-mid">
