--- a/index.html
+++ b/index.html
@@ -176,27 +176,29 @@
     </form>
   </section>
 
-<!-- ====== Footer Top Contact Info ====== -->
-<div class="footer-top">
-  <div class="contact-item">
-    <i class="fas fa-phone-alt"></i>
-    <h5>Phone</h5>
-    <a href="tel:+923063337925">+92 306 3337 925</a>
-  </div>
+<!-- ================= FOOTER ================= -->
+<footer class="footer">
 
-  <div class="contact-item">
-    <i class="fas fa-envelope"></i>
-    <h5>Email</h5>
-    <a href="mailto:amirshahzad37925@gmail.com">amirshahzad37925@gmail.com</a>
-  </div>
+  <!-- Top Contact Info -->
+  <div class="footer-top">
+    <div class="contact-item">
+      <i class="fas fa-phone-alt"></i>
+      <h5>Phone</h5>
+      <a href="tel:+923063337925">+92 306 3337 925</a>
+    </div>
 
-  <div class="contact-item">
-    <i class="fas fa-map-marker-alt"></i>
-    <h5>Location</h5>
-    <span>Bahawalpur, Pakistan</span>
-  </div>
-</div>
+    <div class="contact-item">
+      <i class="fas fa-envelope"></i>
+      <h5>Email</h5>
+      <a href="mailto:amirshahzad37925@gmail.com">amirshahzad37925@gmail.com</a>
+    </div>
 
+    <div class="contact-item">
+      <i class="fas fa-map-marker-alt"></i>
+      <h5>Location</h5>
+      <span>Bahawalpur, Pakistan</span>
+    </div>
+  </div>
 
   <!-- Middle Links -->
   <div class="footer-mid">
@@ -219,16 +221,18 @@
   </div>
 
   <!-- Bottom Social + Copyright -->
-  <div class="social-icons">
-        <a href="https://www.facebook.com/aamir.ibn.al.mazhar" target="_blank"><i class="fab fa-facebook"></i></a>
-        <a href="https://x.com/Aamir3337925" target="_blank"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.instagram.com/aamir_ibnalmazhar/" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://medium.com/@amirshahzad37925" target="_blank"><i class="fab fa-medium"></i></a>
-        <a href="https://join.skype.com/invite/LkkvzG3eqi7S" target="_blank"><i class="fab fa-skype"></i></a>
-      </div>
+  <div class="footer-bottom">
+    <div class="social-icons">
+      <a href="https://www.facebook.com/aamir.ibn.al.mazhar" target="_blank"><i class="fab fa-facebook"></i></a>
+      <a href="https://x.com/Aamir3337925" target="_blank"><i class="fab fa-twitter"></i></a>
+      <a href="https://www.instagram.com/aamir_ibnalmazhar/" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://medium.com/@amirshahzad37925" target="_blank"><i class="fab fa-medium"></i></a>
+      <a href="https://join.skype.com/invite/LkkvzG3eqi7S" target="_blank"><i class="fab fa-skype"></i></a>
+    </div>
 
     <p>© 2025 Aamir Shahzad | All Rights Reserved | <a href="privacy.html">Privacy Policy</a></p>
   </div>
+
 </footer>
 
    <!-- ================= SCRIPTS ================= -->
