--- a/index.html
+++ b/index.html
@@ -106,19 +106,55 @@
   </section>
 
   <!-- ================= PORTFOLIO ================= -->
-  <section class="portfolio" id="portfolio">
-    <h2>My <span>Portfolio</span></h2>
-    <div class="portfolio-container">
+  <section id="portfolio">
+  <h2 class="section-title">My Portfolio</h2>
+  <div class="portfolio-container">
+    <!-- Example Project 1 -->
+    <div class="portfolio-item" data-title="Project 1" data-desc="Description for Project 1">
       <img src="https://i.postimg.cc/BZwWJ5ZQ/Screenshot-2025-08-16-120554.png" alt="Project 1">
-      <img src="https://i.postimg.cc/j50HHFhd/Screenshot-2025-08-16-130718.png" alt="Project 2">
-      <img src="https://i.postimg.cc/3rZXG90Y/Screenshot-2025-08-16-130606.png" alt="Project 3">
-      <img src="https://i.postimg.cc/CLQfC2hT/Screenshot-2025-09-01-094027-1000-rows.png" alt="Project 4">
-      <img src="https://i.postimg.cc/x8q6RxTB/Facebook-SS.png" alt="Project 5">
-      <img src="https://i.postimg.cc/wBHFPTjX/Twitter-SS.png" alt="Project 6">
-      <img src="https://i.postimg.cc/pTLCWG8y/instagram-ss.png" alt="Project 7">
-      <img src="https://i.postimg.cc/8P6HzrFd/Medium-SS.png" alt="Project 8">
+      <div class="overlay">Click to view</div>
     </div>
-  </section>
+
+    <div class="portfolio-item" data-title="Project 2" data-desc="Description for Project 2">
+      <img src="https://i.postimg.cc/j50HHFhd/Screenshot-2025-08-16-130718.png" alt="Project 2">
+      <div class="overlay">Click to view</div>
+    </div>
+
+    <div class="portfolio-item" data-title="Project 3" data-desc="Description for Project 3">
+      <img src="https://i.postimg.cc/3rZXG90Y/Screenshot-2025-08-16-130606.png" alt="Project 3">
+      <div class="overlay">Click to view</div>
+    </div>
+
+    <div class="portfolio-item" data-title="Project 4" data-desc="Description for Project 4">
+      <img src="https://i.postimg.cc/CLQfC2hT/Screenshot-2025-09-01-094027-1000-rows.png" alt="Project 4">
+      <div class="overlay">Click to view</div>
+    </div>
+
+    <!-- Hidden projects -->
+    <div class="portfolio-item hidden" data-title="Project 5" data-desc="Description for Project 5">
+      <img src="https://i.postimg.cc/x8q6RxTB/Facebook-SS.png" alt="Project 5">
+      <div class="overlay">Click to view</div>
+    </div>
+
+    <div class="portfolio-item hidden" data-title="Project 6" data-desc="Description for Project 6">
+      <img src="https://i.postimg.cc/wBHFPTjX/Twitter-SS.png" alt="Project 6">
+      <div class="overlay">Click to view</div>
+    </div>
+
+    <div class="portfolio-item hidden" data-title="Project 7" data-desc="Description for Project 7">
+      <img src="https://i.postimg.cc/pTLCWG8y/instagram-ss.png" alt="Project 7">
+      <div class="overlay">Click to view</div>
+    </div>
+
+    <div class="portfolio-item hidden" data-title="Project 8" data-desc="Description for Project 8">
+      <img src="https://i.postimg.cc/8P6HzrFd/Medium-SS.png" alt="Project 8">
+      <div class="overlay">Click to view</div>
+    </div>
+  </div>
+
+  <button id="seeMoreBtn" class="see-more">See More</button>
+</section>
+
 
   <!-- ================= STATS ================= -->
   <section class="counter-section" id="stats">
