--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
     </div>
   </section>
 
-  <!-- ================= PORTFOLIO ================= -->
-  <section id="portfolio">
+ <!-- ================= PORTFOLIO ================= -->
+<section id="portfolio">
   <h2 class="section-title">My Portfolio</h2>
   <div class="portfolio-container">
     <!-- Example Project 1 -->
@@ -152,8 +152,18 @@
     </div>
   </div>
 
+  <!-- See More Button -->
   <button id="seeMoreBtn" class="see-more">See More</button>
 </section>
+
+<!-- ================= MODAL ================= -->
+<div id="portfolioModal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <h3 id="modalTitle">Project Title</h3>
+    <p id="modalDesc">Project description yahan show hoga.</p>
+  </div>
+</div>
 
 
   <!-- ================= STATS ================= -->
