--- a/index.html
+++ b/index.html
@@ -154,14 +154,16 @@
   <button id="seeMoreBtn" class="see-more">See More</button>
 </section>
 
-<!-- ===== MODAL ===== -->
+<!-- ================= MODAL ================= -->
 <div id="portfolioModal" class="modal">
   <div class="modal-content">
     <span class="close">&times;</span>
+    <img id="modalImg" src="" alt="Project Image">
     <h3 id="modalTitle">Project Title</h3>
     <p id="modalDesc">Project description yahan show hoga.</p>
   </div>
 </div>
+
 
 
   <!-- ================= STATS ================= -->
