--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <!-- ================= PRELOADER ================= -->
   <div id="preloader">
-    <div class="loader-square"></div>
+    <div class="spinner"></div>
   </div>
 
   <!-- ================= NAVBAR ================= -->
