--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 </head>
 <body>
 
-  <!-- ================= PRELOADER ================= -->
   <div id="preloader">
-    <div class="spinner"></div>
+    <svg id="loader-shape" viewBox="0 0 100 100" width="80" height="80">
+      <!-- Square as starting shape -->
+      <path d="M20,20 L80,20 L80,80 L20,80 Z" fill="white" />
+    </svg>
   </div>
-
+  
   <!-- ================= NAVBAR ================= -->
   <nav>
     <div class="logo">Aamir<span>Shahzad</span></div>
@@ -60,7 +62,7 @@
         that convert into real business opportunities.
       </p>
       <ul class="info">
-        <li><b>Email:</b> amirshahzad37925@gmailcom</li>
+        <li><b>Email:</b> amirshahzad37925@gmail.com</li>
         <li><b>Phone:</b> +92 306 3337925</li>
         <li><b>Location:</b> Bahawalpur, Pakistan</li>
       </ul>
@@ -397,5 +399,8 @@
       });
     });
   </script>
+  <!-- Scripts -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
