--- a/index.html
+++ b/index.html
@@ -402,9 +402,18 @@
         lightbox.addEventListener("click", () => document.body.removeChild(lightbox));
       });
     });
+    
   </script>
   <!-- Scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
   <script src="script.js"></script>
+  
+  <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
+<script>
+  particlesJS.load("particles-js", "particles.json", function () {
+    console.log("Particles.js loaded");
+  });
+</script>
+
 </body>
 </html>
