--- a/index.html
+++ b/index.html
@@ -247,7 +247,14 @@
   </div>
 
   <!-- Middle Links -->
-  <div class="footer-mid">
+  <!-- Left Logo & Tagline -->
+  <div class="footer-left">
+    <img src="https://i.postimg.cc/rFKm8KLN/Purple-Abstract-A-Letter-Free-Logo-removebg-preview.png" alt="Logo">
+    <p class="tagline">Designing Dreams, Crafting Reality</p>
+  </div>
+
+  <!-- Right Columns -->
+  <div class="footer-right">
     <div class="footer-col">
       <h4>About</h4>
       <ul>
@@ -265,6 +272,7 @@
       </ul>
     </div>
   </div>
+</div>
 
   <!-- Bottom Social + Copyright -->
   <div class="footer-bottom">
