--- a/index.html
+++ b/index.html
@@ -247,15 +247,12 @@
   </div>
 
   <!-- Middle Links -->
-  <!-- Left Logo & Tagline -->
-  <div class="footer-left">
-    <img src="https://i.postimg.cc/rFKm8KLN/Purple-Abstract-A-Letter-Free-Logo-removebg-preview.png" alt="Logo">
+<<div class="footer-bottom">
+  <div class="footer-col logo-col">
+    <img src="images/logo.png" alt="Logo">
     <p class="tagline">Designing Dreams, Crafting Reality</p>
   </div>
-
-  <!-- Right Columns -->
-  <div class="footer-right">
-    <div class="footer-col">
+  <div class="footer-col">
       <h4>About</h4>
       <ul>
         <li><a href="about.html">My Story</a></li>
@@ -272,7 +269,6 @@
       </ul>
     </div>
   </div>
-</div>
 
   <!-- Bottom Social + Copyright -->
   <div class="footer-bottom">
