--- a/index.html
+++ b/index.html
@@ -247,28 +247,32 @@
   </div>
 
   <!-- Middle Links -->
-<<div class="footer-bottom">
+<div class="footer-mid">
+  <!-- Logo + Tagline -->
   <div class="footer-col logo-col">
-    <img src="images/logo.png" alt="Logo">
+    <img src="https://i.postimg.cc/rFKm8KLN/Purple-Abstract-A-Letter-Free-Logo-removebg-preview.png" alt="Logo">
     <p class="tagline">Designing Dreams, Crafting Reality</p>
   </div>
-  <div class="footer-col">
-      <h4>About</h4>
-      <ul>
-        <li><a href="about.html">My Story</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-      </ul>
-    </div>
 
-    <div class="footer-col">
-      <h4>Resources</h4>
-      <ul>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="privacy.html">Privacy Policy</a></li>
-      </ul>
-    </div>
+  <!-- About -->
+  <div class="footer-col">
+    <h4>About</h4>
+    <ul>
+      <li><a href="about.html">My Story</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="portfolio.html">Portfolio</a></li>
+    </ul>
   </div>
+
+  <!-- Resources -->
+  <div class="footer-col">
+    <h4>Resources</h4>
+    <ul>
+      <li><a href="blog.html">Blog</a></li>
+      <li><a href="privacy.html">Privacy Policy</a></li>
+    </ul>
+  </div>
+</div>
 
   <!-- Bottom Social + Copyright -->
   <div class="footer-bottom">
