--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <!-- ================= ABOUT ================= -->
   <section class="about" id="about">
     <div class="about-img">
-      <img src="https://i.postimg.cc/6QzjYwy5/Whats-App-Image-2025-09-01-at-9-17-04-AM.jpg" alt="Aamir Shahzad">
+      <img src="file:///C:/Users/aamir/Downloads/WhatsApp%20Image%202025-09-01%20at%209.17.04%20AM.jpeg" alt="Aamir Shahzad">
     </div>
     <div class="about-text">
       <h2>About <span>Me</span></h2>
