--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         that convert into real business opportunities.
       </p>
       <ul class="info">
-        <li><b>Email:</b> amirshahzad37925@gmailcom</li>
+        <li><b>Email:</b> aamirsinfo@gmailcom</li>
         <li><b>Phone:</b> +92 306 3337925</li>
         <li><b>Location:</b> Bahawalpur, Pakistan</li>
       </ul>
@@ -211,7 +211,7 @@
   <!-- ================= CONTACT ================= -->
   <section class="contact" id="contact">
     <h2>Contact <span>Me</span></h2>
-    <form action="https://formsubmit.co/amirshahzad37925@gmail.com" method="POST">
+    <form action="https://formsubmit.co/aamirsinfo@gmail.com" method="POST">
     <input type="hidden" name="_captcha" value="false">
     <input type="hidden" name="_subject" value="New Contact Message from Portfolio">
     <input type="hidden" name="_next" value="https://amirshahzad37925-create.github.io/My-Portfolio/thankyou.html">
@@ -236,7 +236,7 @@
     <div class="contact-item">
       <i class="fas fa-envelope"></i>
       <h5>Email</h5>
-      <a href="mailto:amirshahzad37925@gmail.com">amirshahzad37925@gmail.com</a>
+      <a href="mailto:aamirsinfo@gmail.com">aamirsinfo@gmail.com</a>
     </div>
 
     <div class="contact-item">
