--- a/index.html
+++ b/index.html
@@ -248,31 +248,33 @@
 
   <!-- Middle Links -->
 <div class="footer-mid">
-  <!-- Logo + Tagline -->
-  <div class="footer-col logo-col">
+  <!-- Left: Logo + Tagline -->
+  <div class="logo-col">
     <img src="https://i.postimg.cc/rFKm8KLN/Purple-Abstract-A-Letter-Free-Logo-removebg-preview.png" alt="Logo">
     <p class="tagline">Designing Dreams, Crafting Reality</p>
   </div>
 
-  <!-- About -->
-  <div class="footer-col">
-    <h4>About</h4>
-    <ul>
-      <li><a href="about.html">My Story</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
-    </ul>
-  </div>
+  <!-- Right: About + Resources (Grouped) -->
+  <div class="footer-right">
+    <div class="footer-col">
+      <h4>About</h4>
+      <ul>
+        <li><a href="about.html">My Story</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+      </ul>
+    </div>
 
-  <!-- Resources -->
-  <div class="footer-col">
-    <h4>Resources</h4>
-    <ul>
-      <li><a href="blog.html">Blog</a></li>
-      <li><a href="privacy.html">Privacy Policy</a></li>
-    </ul>
+    <div class="footer-col">
+      <h4>Resources</h4>
+      <ul>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="privacy.html">Privacy Policy</a></li>
+      </ul>
+    </div>
   </div>
 </div>
+v>
 
   <!-- Bottom Social + Copyright -->
   <div class="footer-bottom">
